@@ -7,6 +7,13 @@
 
 <news name="nginx news" link="/" lang="en">
 
+<event date="2019-11-19">
+<para>
+<link doc="en/download.xml">nginx-1.17.6</link>
+mainline version has been released.
+</para>
+</event>
+
 <event date="2019-11-14">
 <para>
 <link url="https://unit.nginx.org/">unit-1.13.0</link>
