@@ -9,6 +9,7 @@
 
 <download tag="mainline" changes="">
 
+<item ver="1.17.6" />
 <item ver="1.17.5" />
 <item ver="1.17.4" />
 <item ver="1.17.3" />
